--- a/css/common.css
+++ b/css/common.css
@@ -1,4 +1,8 @@
 
+.mc{
+	margin: 0%;
+}
+
 .sbt1{
 	font-family: 'Open Sans', sans-serif;
 }
@@ -15,3 +19,52 @@
 .pd-3 {
 	padding: 3%;
 }
+
+.pd-2 {
+	padding: 2%;
+}
+
+#menu2{
+	padding: 10%;
+
+}
+
+.mr-5{
+	margin-left: 100px;
+}
+
+.bg-gray{
+	background-color: rgb(244, 244, 244);
+}
+
+#load{
+	background-color: #0B173B;
+	width: 130px;
+	height: 40px;
+	color: white;
+	text-decoration: none;
+	margin-left: 45%;
+	padding: 10px;
+}
+
+
+a.boton { 
+	color: black;  
+	padding: 10px; 
+	background-color: white; 
+	font-weight: bold; 
+	text-decoration: none; 
+} 
+
+a.boton:hover { 
+	font-style: italic; 
+	box-shadow: 0px 0px 5px 0px #000000;
+	background-color: #0080FF; 
+} 
+a.boton:active { 
+	color:#0B173B; 
+	background-color: #0080FF; 
+	box-shadow: 0px 0px 10px 0px #000000;
+	background-color:#00BFFF; 
+}
+
