--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,23 @@
+.blanco{
+	background-color: white;
+	box-shadow: 2px 2px 5px #999;
+	width: 520px;
+	margin-right: 30px;
+	padding-bottom: 10px;
+	padding-top: 10px;
+}
 
+.mol{
+	margin-left: 10px;
+}
+
+a{
+	text-decoration: none;
+	font-family: 'Open Sans', sans-serif;
+}
+
+li{
+	text-decoration: none;
+	font-family: 'Open Sans', sans-serif;
+	display: inline-block;
+}
