--- a/css/common.css
+++ b/css/common.css
@@ -12,8 +12,18 @@
 	font-style: bold;
 }
 
+.stitulos{
+	font-size: 25px;
+	font-style: bold;
+	margin-left: 105px;
+}
+
 .icons{
 	margin-left:60px; 
+}
+
+.iconsr{
+	margin-right:20px; 
 }
 
 .pd-3 {
@@ -48,8 +58,25 @@
 	margin-left: 100px;
 }
 
+.mb-3{
+	margin-bottom: 3%;
+}
+
 .bg-gray{
 	background-color: rgb(244, 244, 244);
+}
+
+.ins{
+	filter: brightness(50%);
+ 	opacity: 0.5;
+    filter: alpha(opacity=50);
+    font-size: 16px;
+    width: 650px;
+}
+
+.opacity{
+	 opacity: 1;
+    filter: alpha(opacity=100);
 }
 
 #load{
@@ -60,6 +87,17 @@
 	text-decoration: none;
 	margin-left: 45%;
 	padding: 10px;
+}
+
+#load2{
+	background-color: #0080FF;
+	width: 150px;
+	height: 40px;
+	color: white;
+	text-decoration: none;
+	margin-left: 14%;
+	padding: 10px;
+	font-size: 16px;
 }
 
 
@@ -82,4 +120,5 @@ a.boton:active {
 	box-shadow: 0px 0px 10px 0px #000000;
 	background-color:#00BFFF; 
 }
+
 
