--- a/css/utilities.css
+++ b/css/utilities.css
@@ -79,6 +79,11 @@ strong {
 .bg-gray{
 	background-color: rgb(244, 244, 244);
 }
+
+.bg-gray{
+	background-color: white;
+}
+
 .bg-img-block {
 	background-size: cover;
 	background-repeat: no-repeat;
